# Module-Validator

./: .env  .env_example  .gitignore  .gitmodules  README.md  api.py  build_config.sh  check_entrypoints.py  cleanup.sh  commune_validator.py  config.py  config_model.py  configuration.py  data_models.py  dev_module_validator.db  generate_pydantic_model.py  miner.py  module_manager.py  mypy.ini  output.txt  pyproject.toml  requirements.txt  run_vision_validator.sh  set_environment.sh  setup.cfg  setup.py  setup.sh  testing.py  validator.py  validator.sh  vote.py  walkdir.py
.depreciated/: add_environment_variables.py  configuration_template.py  generated_config.json  generated_config.py  generated_config.yaml
.depreciated/neurons/: subnet_template_miner.py
.translation/: pyvenv.cfg
api/: api.py
base/: base_module.py  base_validator.py
base copy/: base_miner.py  base_module.py
bash_scripts/: .gitkeep  bt_subnet_setup.sh  environment_sylliba.sh  install_module.sh  run_vision_validator.sh  setup.sh  syll_setup.sh
chains/: parse_function.py
chains/com/: commune_key_manager.py  get_miner_data.py  register_miner.sh
data/: function_data.json  function_docs.md  registry.json  subnet_info.json
module_validator/: __init__.py  _configuration.py  cli.py  config.py  custom_modules.py  database.py  main.py  module.py  registry.py
module_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
modules/: registry.json
neruons/: subnet_template_validator.py
scripts/: run_vision_validator.sh  setup.sh
static/: function_docs.md  miner_statistics.json
utils/: add_environment_variables.py  check_entrypoints.py  config_generator.py  configuration.py  configuration_template.py  create_bittensor_config.py  generate_config.py  generated_config.py  output.txt  run_module.py  set_cwd.py  set_environment.sh  update_setup.py  walkdir.py
validators/: bittensor_validator.py  commune_validator.py  config.py
(+49 files in other folders)
