[tool.poetry]
name = "module-validator"
version = "0.1.0"
description = "Modular Validator for Substrate subnets"
authors = ["Richard <bakobiibizo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core", "setuptools>=61.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "module_validator"
version = "1.0.0"
description = "Module Validator for Substrate subnet validation"
authors = [
    { name = "bakobiibizo", email = "richard@agentartificial.com" }
]
license = { text = "MIT" }
urls = { "Home" = "https://github.com/bakobiibizo/module_validator" }
keywords = ["module_validator", "Substrate", "subnet", "validation"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mypy", "black"]

[project.scripts]
module_validator = "module_validator.main:main"

