[flake8]
ignore = E501

[metadata]
name = module_validator
version = 1.0.0
description = Module Validator for Substrate subnet validation
author = bakobiibizo
author_email = richard@agentartificial.com
license = MIT
url = https://github.com/bakobiibizo/module_validator

[options]
packages = find:

[options.entry_points]
console_scripts =
    module_validator = module_validator.main:main

module_validator.module =
    default = module_validator.main:default_output
    register = module_validator.main:register

module_validator.inference =
    financialnews = module_validator.modules.financialnews.financialnews:process
    embedding = module_validator.modules.embedding.embedding:process
    translation = module_validator.modules.translation.translation:process

module_validaotr.subnet =
    bittensor_subnet_template = module_valdiator.subnet_modules.bittensor_subnet_template
    sylliba = sylliba.subnet_modules.vision
    vision = sylliba.subnet_modules.vision